Mess with spacing to handle fixed header

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,8 +8,6 @@ dl, dd, ol, ul, figure {
     padding: 0;
 }
 
-.twitter-tweet {}
-
 /**
  * Basic styling
  */
