--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -174,6 +174,10 @@
     margin: 70px auto;
 }
 
+.anchor {
+     padding-top: 70px;
+}
+
 .page-heading {
     font-size: 20px;
 }
